[tool.poetry]
name = "how-diffusion-models-work"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "how_diffusion_models_work"}]

[tool.poetry.dependencies]
python = "3.11.4"
torch = "^2.0.1"
torchvision = "^0.15.2"
matplotlib = "^3.7.1"
pillow = "^9.5.0"
tqdm = "^4.65.0"
numpy = "^1.25.0"
ipykernel = "^6.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
